[project]
name = "enterprise-agentic-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
