[project]
name = "enterprise-agentic-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "grandalf>=0.8",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
